# VulkanRenderer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp
libraries/glm/glm/: CMakeLists.txt
source/: Buffers.h  CMakeLists.txt  Camera.cpp  Camera.h  CompileShaders.cmake  DebugMessenger.cpp  DebugMessenger.h  EngineConfig.h  VulkanApp.cpp  VulkanApp.h  VulkanEngine.cpp  VulkanEngine.h  VulkanEngineOptions.h  Window.cpp  Window.h
source/cmake/: Assets.cmake  CompileShaders.cmake  Dependencies.cmake  External.cmake  Headers.cmake  Sources.cmake
source/components/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Components.h  DebugMessenger.cpp  DebugMessenger.h  Framebuffer.cpp  Framebuffer.h  ImGuiInstance.cpp  ImGuiInstance.h  Instance.cpp  Instance.h  LightingManager.cpp  LightingManager.h  LogicalDevice.cpp  LogicalDevice.h  MousePicker.cpp  MousePicker.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineManager.cpp  PipelineManager.h  RenderPass.cpp  RenderPass.h  SwapChain.cpp  SwapChain.h  UniformBuffer.cpp  UniformBuffer.h  Window.cpp  Window.h
source/components/assetManager/: AssetManager.cpp
source/components/assets/: AssetManager.cpp  AssetManager.h
source/components/camera/: Camera.cpp  Camera.h
source/components/commandBuffer/: CommandBuffer.cpp  CommandBuffer.h  SingleUseCommandBuffer.cpp  SingleUseCommandBuffer.h
source/components/computingManager/: ComputingManager.cpp  ComputingManager.h
source/components/framebuffer/: Framebuffer.cpp  Framebuffer.h  StandardFramebuffer.cpp  StandardFramebuffer.h  SwapchainFramebuffer.cpp  SwapchainFramebuffer.h
source/components/framebuffers/: Framebuffer.cpp  Framebuffer.h  StandardFramebuffer.cpp  StandardFramebuffer.h  SwapchainFramebuffer.cpp  SwapchainFramebuffer.h
source/components/imGui/: ImGuiInstance.cpp  ImGuiInstance.h
source/components/instance/: DebugMessenger.cpp  DebugMessenger.h  Instance.cpp  Instance.h
source/components/lighting/: Light.cpp  Light.h  LightingManager.cpp  LightingManager.h
source/components/logicalDevice/: LogicalDevice.cpp  LogicalDevice.h
source/components/mousePicker/: MousePicker.cpp  MousePicker.h
source/components/objects/: Model.cpp  Model.h  RenderObject.cpp  RenderObject.h
source/components/physicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
source/components/pipelineManager/: PipelineManager.cpp  PipelineManager.h
source/components/pipelines/: ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  RayTracingPipeline.cpp  RayTracingPipeline.h  ShaderModule.cpp  ShaderModule.h
source/components/renderPass/: RenderPass.cpp
source/components/renderingManager/: DynamicRenderer.cpp  DynamicRenderer.h  ImageResource.cpp  ImageResource.h  LegacyRenderer.cpp  LegacyRenderer.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  RenderingManager.cpp  RenderingManager.h
source/components/textures/: CubeMapTexture.cpp  CubeMapTexture.h  Noise3DTexture.cpp  Noise3DTexture.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  TextureCubemap.cpp  TextureCubemap.h
source/components/uniformBuffer/: UniformBuffer.cpp
source/components/window/: Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
source/core/commandBuffer/: CommandBuffer.cpp  CommandBuffer.h
source/core/instance/: DebugMessenger.cpp  DebugMessenger.h  Instance.cpp  Instance.h
source/core/logicalDevice/: LogicalDevice.cpp  LogicalDevice.h
source/core/physicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
source/objects/: CubeMapTexture.cpp  CubeMapTexture.h  Light.cpp  Light.h  Model.cpp  Model.h  Noise3DTexture.cpp  Noise3DTexture.h  Objects.h  RenderObject.cpp  RenderObject.h  Texture.cpp  Texture.h  TransformUniformBuffer.cpp  TransformUniformBuffer.h  UniformBuffer.cpp  UniformBuffer.h
source/pipeline/: Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GuiPipeline.cpp  ImguiPipeline.cpp  ImguiPipeline.h  RenderPass.cpp  RenderPass.h  ShaderModule.cpp  ShaderModule.h  Vertex.cpp  Vertex.h
source/pipelines/: ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GuiPipeline.cpp  GuiPipeline.h  LineVertex.h  ObjectsPipeline.cpp  ObjectsPipeline.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  ShaderModule.cpp  ShaderModule.h  SmokeParticle.h  Uniforms.h  Vertex.cpp  Vertex.h
source/pipelines/compute/: ComputePipeline.cpp
source/pipelines/custom/: BendyPipeline.cpp  Uniforms.h  (+36 more)
source/shaders/: Bendy.frag  Bendy.vert  BumpyCurtain.frag  Crosses.frag  Crosses.geom  CubeMap.frag  Curtain.frag  Curtain.vert  EllipticalDots.frag  EllipticalDots.vert  Grid.frag  Grid.vert  Line.vert  MagnifyWhirlMosaic.frag  MousePicking.vert  NoisyEllipticalDots.frag  ObjectHighlight.vert  Shadow.vert  ShadowCubeMap.frag  ShadowCubeMap.vert  Smoke.comp  Smoke.frag  Smoke.vert  Snake.frag  Snake.geom  Snake.vert  StandardObject.vert  TexturedPlane.frag  TexturedPlane.vert  objects.frag  objects.vert  shader.frag  shader.vert  ui.vert
source/utilities/: Buffers.cpp  Buffers.h  EventSystem.cpp  EventSystem.h  Images.cpp  Images.h
tests/: Assets.cmake  CMakeLists.txt
tests/2D/: CMakeLists.txt  main.cpp
tests/bumpyCurtain/: CMakeLists.txt  main.cpp
tests/clouds/: CMakeLists.txt  main.cpp
tests/common/: gui.h
tests/crosses/: CMakeLists.txt  main.cpp
tests/cube/: CMakeLists.txt  main.cpp
tests/cubeMap/: CMakeLists.txt  main.cpp
tests/curtain/: CMakeLists.txt  main.cpp
tests/ellipticalDots/: CMakeLists.txt  main.cpp
tests/grid/: CMakeLists.txt  main.cpp
tests/magicLens/: CMakeLists.txt  main.cpp
tests/mousePicking/: CMakeLists.txt  main.cpp
tests/noisyEllipticalDots/: CMakeLists.txt  main.cpp
tests/objectLoading/: CMakeLists.txt  main.cpp
tests/plants/: CMakeLists.txt  main.cpp
tests/renderObject/: CMakeLists.txt  main.cpp
tests/shadows/: CMakeLists.txt  main.cpp
tests/smoke/: CMakeLists.txt  main.cpp
tests/snake/: CMakeLists.txt  main.cpp
tests/spotLight/: CMakeLists.txt  main.cpp
(+272 files in other folders)
